--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,6 @@ dependencies = [
     "langchain-openai>=0.3.9",
     "scrapy>=2.12.0",
     "feedgen>=0.9.0",
+    "fastapi>=0.110.0",
 ]
 license = "Apache-2.0"
