--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 fastapi>=0.110.0
 uvicorn>=0.27.0
+feedgen>=0.9.0
 python-dateutil>=2.9.0
 pydantic>=2.6.0
 
@@ -8,6 +9,5 @@ langchain
 langchain-community
 python-dotenv
 scrapy
-scrapy-playwright
 Twisted
 psycopg[binary]
